@@ -197,7 +197,7 @@ int     refresh_interval = 5;
 int     msgcount = 22;
 
     if ((command = cgi_variable(webblk,"command")))
-        SYNCHRONOUS_PANEL_CMD(command);
+        panel_command(command);
 
     if((value = cgi_variable(webblk,"msgcount")))
         msgcount = atoi(value);
