@@ -10,6 +10,9 @@ AC_CANONICAL_HOST
 # Initialization
 CFLAGS="-W -Wall $CFLAGS"
 
+#loadable modules
+LIBS="-rdynamic -ldl"
+
 # Programs
 AC_PROG_CC
 
@@ -471,5 +474,5 @@ AH_TEMPLATE([BUILTIN_STRERROR_R],
 AH_TEMPLATE([OPTION_CONFIG_SYMBOLS],
             [Define to enable symbolic substitutions in configuration file])
 
-AC_OUTPUT([Makefile util/Makefile html/Makefile po/Makefile.in po/Makefile man/Makefile ])
+AC_OUTPUT([Makefile util/Makefile html/Makefile po/Makefile.in po/Makefile man/Makefile  intl/Makefile ])
 
