@@ -16,6 +16,8 @@
 
 #include "opcode.h"
 
+#include "inline.h"
+
 #if !defined(_DIAGNOSE_H)
 
 #define _DIAGNOSE_H
@@ -26,6 +28,86 @@
 #define SPACE   ((BYTE)' ')
 
 #endif /*!defined(_DIAGNOSE_H)*/
+
+#if defined(OPTION_DYNAMIC_LOAD) && defined(FEATURE_HERCULES_DIAGCALLS)
+//  Diagnose F14 - dll interface
+//
+//  Purpose:
+//
+//  Allow external routines to be called from OS running under hercules
+//  external routines must reside in hercules dll's
+//
+//
+//  Instruction:
+//
+//    Format:
+//
+//    83 r1 r3 d2(b2)
+//
+//    r1: register containing real address of external routine name to be
+//        called this routine name is defined as CL32, and is subject to
+//        EBCDIC to ASCII translation under control of hercules codepages.
+//        This parameter must be 32 byte aligned.
+//
+//    r3: register containing user parameter.
+//
+//    d2(b2): 0xF14
+//
+//
+//  External routine:
+//
+//    void xxxx_diagf14_routine_name(int r3, REGS *regs);
+//
+//    xxxx_diagf14_ prefix to routine_name 
+//    xxxx being either s370, s390 or z900 depending on architecture mode.
+//
+//    The instruction is subject to machine malfunction checking.
+//    The external routine may be interrupted when an extended wait or loop
+//    occurs.
+//
+
+void ARCH_DEP(diagf14_call)(int r1, int r3, REGS *regs)
+{
+BYTE name[32+1];
+char entry[64];
+unsigned int  i;
+void (*dllcall)(int, REGS *);
+
+static char *prefix[] = {
+#if defined(_370)
+    "s370_diagf14_",
+#endif
+#if defined(_390)
+    "s390_diagf14_",
+#endif
+#if defined(_900)
+    "z900_diagf14_"
+#endif
+    };
+
+    ARCH_DEP(vfetchc) (name,sizeof(name)-2, regs->GR(r1), USE_REAL_ADDR, regs);
+
+    for(i = 0; i < sizeof(name)-1; i++)
+    {
+        name[i] = guest_to_host(name[i]);
+        if(!isprint(name[i]) || isspace(name[i]))
+        {
+            name[i] = '\0';
+            break;
+        }
+    }
+    /* Ensure string terminator */
+    name[i] = '\0';
+    strcpy(entry,prefix[regs->arch_mode]);
+    strcat(entry,name);
+
+    if( (dllcall = HDL_FINDENT(entry)) )
+        dllcall(r3, regs);
+    else
+        ARCH_DEP(program_interrupt) (regs, PGM_SPECIFICATION_EXCEPTION);
+
+}
+#endif /*defined(OPTION_DYNAMIC_LOAD)*/
 
 /*-------------------------------------------------------------------*/
 /* Diagnose instruction                                              */
@@ -296,6 +378,15 @@ U32             n;                      /* 32-bit operand value      */
         regs->cpustate = CPUSTATE_STOPPING;
         ON_IC_CPU_NOT_STARTED(regs);
         break;
+
+#if defined(OPTION_DYNAMIC_LOAD)
+    case 0xF14:
+    /*---------------------------------------------------------------*/
+    /* Diagnose F14: Hercules DLL interface                          */
+    /*---------------------------------------------------------------*/
+        ARCH_DEP(diagf14_call) (r1, r2, regs);
+        break;
+#endif /*defined(OPTION_DYNAMIC_LOAD)*/
 
 #if !defined(NO_SIGABEND_HANDLER)
     /* The following diagnose calls cause a exigent (non-repressible)
