@@ -30,6 +30,9 @@ LFLAGS	+= -lbz2
 CFLAGS	+= -DHET_BZIP2
 LFLAGS	+= -lbz2
 
+# Dynamic loader support
+LFLAGS	+= -rdynamic -ldl
+
 EXEFILES = hercules hercifc \
            dasdinit dasdisup dasdload dasdls dasdcat dasdpdsu dasdseq \
            tapecopy tapemap tapesplt \
@@ -54,7 +57,7 @@ hercules_OBJ = hostinfo.o w32ctca.o impl.o config.o panel.o \
                parser.o hetlib.o ieee.o sockdev.o httpserv.o \
                cgibin.o devtype.o codepage.o ctc_ctci.o ctc_lcs.o \
                tuntap.o hsccmd.o hscmisc.o logger.o commadpt.o \
-               cache.o ecpsvm.o shared.o logmsg.o
+               cache.o ecpsvm.o shared.o logmsg.o hdl.o hdlmain.o
 
 hercifc_OBJ  = hercifc.o hostinfo.o version.o 
 
@@ -139,7 +142,7 @@ HEADERS  = codepage.h commadpt.h cpuint.h ctcadpt.h dasdblks.h \
            hetlib.h hostinfo.h httpmisc.h htypes.h ieee-w32.h \
            if_tun.h inline.h linklist.h logger.h machdep.h opcode.h \
            parser.h sllib.h tapedev.h tt32api.h tuntap.h version.h \
-           vstore.h w32chan.h w32ctca.h shared.h
+           vstore.h w32chan.h w32ctca.h shared.h hdl.h
 
 all:	   $(EXEFILES)
 
